@@ -1,5 +1,7 @@
 package com.hbhw.jippy.domain.chat.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.hbhw.jippy.domain.chat.dto.request.ChatMessageRequest;
 import com.hbhw.jippy.domain.chat.dto.request.CreateChatRequest;
 import com.hbhw.jippy.domain.chat.dto.response.ChatListResponse;
@@ -8,10 +10,16 @@ import com.hbhw.jippy.domain.chat.entity.Message;
 import com.hbhw.jippy.domain.chat.entity.StoreChat;
 import com.hbhw.jippy.domain.chat.repository.ChatListRepository;
 import com.hbhw.jippy.domain.chat.repository.ChatRepository;
+import com.hbhw.jippy.domain.dashboard.dto.response.staff.StoreSalaryResponse;
+import com.hbhw.jippy.global.code.CommonErrorCode;
+import com.hbhw.jippy.global.error.BusinessException;
 import com.hbhw.jippy.utils.DateTimeUtils;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Service;
 
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
@@ -20,11 +28,16 @@ import java.util.NoSuchElementException;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ChatService {
     private final ChatRepository chatRepository;
     private final ChatListRepository chatlistRepository;
+    private final RedisTemplate<String, String> redisTemplate;
+    private final ObjectMapper objectMapper;
+
+    private static final String CACHE_PREFIX = "chat";
 
     // 채팅방 목록 조회
     public List<ChatListResponse> getChatList(Integer userId) {
@@ -35,25 +48,41 @@ public class ChatService {
 
     // 메시지 조회
     public List<ChatMessageResponse> getMessages(Integer storeId) {
-        Optional<StoreChat> storeChatOpt;
+        String key = CACHE_PREFIX + storeId;
+        String cashJsonData = redisTemplate.opsForValue().get(key);
 
-        storeChatOpt = chatRepository.findRecentMessages(storeId);
+        try {
 
-        StoreChat storeChat = storeChatOpt.orElseThrow(() ->
-                new NoSuchElementException("채팅방을 찾을 수 없습니다. storeId=" + storeId));
+            if (cashJsonData != null) {
+                log.info("chat : cash hit!!");
+                return objectMapper.readValue(cashJsonData, new TypeReference<>() {
+                });
+            }
+            Optional<StoreChat> storeChatOpt = chatRepository.findRecentMessages(storeId);
 
-        // messages 리스트 가져오고, limit 개수만큼 제한
-        List<Message> messages = storeChat.getMessages();
+            StoreChat storeChat = storeChatOpt.orElseThrow(() ->
+                    new NoSuchElementException("채팅방을 찾을 수 없습니다. storeId=" + storeId));
 
-        return messages.stream()
-                .map(msg -> new ChatMessageResponse(
-                        msg.getSenderId(),
-                        msg.getMessageId(),
-                        msg.getMessageContent(),
-                        msg.getTimestamp(),
-                        msg.getMessageType()
-                ))
-                .collect(Collectors.toList());
+            // messages 리스트 가져오고, limit 개수만큼 제한
+            List<Message> messages = storeChat.getMessages();
+            List<ChatMessageResponse> chatMessageResponseList = messages.stream()
+                    .map(msg -> new ChatMessageResponse(
+                            msg.getSenderId(),
+                            msg.getMessageId(),
+                            msg.getMessageContent(),
+                            msg.getTimestamp(),
+                            msg.getMessageType()
+                    ))
+                    .toList();
+
+
+            String jsonData = objectMapper.writeValueAsString(chatMessageResponseList); // 객체 → JSON 변환
+            redisTemplate.opsForValue().set(key, jsonData, Duration.ofSeconds(60 * 60));
+            log.info("chat : db search");
+            return chatMessageResponseList;
+        } catch (Exception e) {
+            throw new BusinessException(CommonErrorCode.INTERNAL_SERVER_ERROR, "채팅 서버 에러발생");
+        }
     }
 
     // 채팅방 생성
@@ -75,6 +104,12 @@ public class ChatService {
      * 채팅 메시지를 저장하고 반환
      */
     public ChatMessageResponse saveMessage(Integer storeId, ChatMessageRequest request) {
+        String key = CACHE_PREFIX + storeId;
+        if (Boolean.TRUE.equals(redisTemplate.hasKey(key))) {
+            log.info("chat cashe: {} → delete", key);
+            redisTemplate.delete(key);
+        }
+
         // 1) 기존 storeChat 문서 조회
         StoreChat storeChat = chatRepository.findByStoreId(storeId)
                 .orElseThrow(() -> new NoSuchElementException("채팅방을 찾을 수 없습니다. storeId=" + storeId));
